--- a/gs/gslinks.html
+++ b/gs/gslinks.html
@@ -1,3 +1,7 @@
-Links to Google Sheets
+<html>
+  <title> Google Sheets Links</title> 
+<body>
 <a href='https://drive.google.com/drive/folders/1DdUHg-VykTT-E9hxo0xOCx-_rehcvPrr'> Folder </a>
 <a href="https://docs.google.com/spreadsheets/d/1a2b3c4d5e6f7g8h9i0j1k2l3m4n5o6p7q8r9s0t1u2v3w4x5y6z7/edit#gid=0">Google Sheet Example</a>
+</body>
+</html>
